--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,25 +3,38 @@ cmake_minimum_required(VERSION 3.2)
 
 # 项目名称
 project(EffectViewer)
+SET(CMAKE_BUILD_TYPE "Release")
 
 # 让cmake自动去寻找Qt5
 SET(Qt5_DIR "D:\\ProgramFiles\\Qt\\Qt5.14.2\\5.14.2\\msvc2017_64\\lib\\cmake\\Qt5" CACHE PATH "Initial cahe" FORCE)
-SET(CMAKE_BUILD_TYPE "Release")
 FIND_PACKAGE(Qt5 COMPONENTS Widgets REQUIRED)
+
+# opecv库
+SET(OpenCV_DIR "D:\\lib\\opencv\\opencv\\build" CACHE PATH "Initial cahe" FORCE)
+FIND_PACKAGE( OpenCV REQUIRED )
+
+# oxxn runtime库
+LINK_DIRECTORIES(D:/Github/github/onnxruntime/build/Windows/RelWithDebInfo/RelWithDebInfo)
+SET (ORT_LIBS onnxruntime.lib)
+
 
 # 采用C++14标准
 SET(CMAKE_CXX_STANDARD 14)
 
 # 添加所有的源文件
 SET(EffectViewer_SOURCES 
-	main.cpp
+	src/main.cpp
+	src/MainWindow.cpp
+	src/CVFunctions.cpp
+	src/ORTFunctions.cpp
 )
 
 # 添加所有的头文件
-#SET(EffectViewer_HEADERS 
-#	mywidget.h
-#	mydialog.h
-#)
+SET(EffectViewer_HEADERS 
+	include/MainWindow.h
+	include/CVFunctions.h
+	include/ORTFunctions.h
+)
 
 # 添加所有的.ui文件
 #SET(EffectViewer_FORMS 
@@ -42,6 +55,8 @@ QT5_ADD_RESOURCES(EffectViewer_RESOURCES_RCC ${EffectViewer_RESOURCES})
 
 # 这些生成的中间文件都会在build目录下，这样的话，编译器则不能定位由uic程序产生的诸如_ui_mainwindow.h等文件。所以，我们需要把build目录添加到包含目录中
 INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
+INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
+INCLUDE_DIRECTORIES("D:\\Github\\github\\onnxruntime\\include\\onnxruntime\\core\\session")
 
 # 生成可执行文件
 ADD_EXECUTABLE(EffectViewer 
@@ -52,4 +67,4 @@ ADD_EXECUTABLE(EffectViewer
 )
 
 # 为target添加需要链接的共享库
-TARGET_LINK_LIBRARIES(EffectViewer ${Qt5Widgets_LIBRARIES})
+TARGET_LINK_LIBRARIES(EffectViewer ${Qt5Widgets_LIBRARIES} ${OpenCV_LIBS} ${ORT_LIBS})
